--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
             <h2>Some random information</h2>
             <div class="info-items">
                 <div class="item">
-                    <img src="#" alt="">
+                    <img src="https://cdn.pixabay.com/photo/2023/09/04/10/12/bird-8232427_960_720.jpg" alt="">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="item">
-                    <img src="#" alt="">
+                    <img src="https://cdn.pixabay.com/photo/2023/09/04/10/12/bird-8232427_960_720.jpg" alt="">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="item">
-                    <img src="#" alt="">
+                    <img src="https://cdn.pixabay.com/photo/2023/09/04/10/12/bird-8232427_960_720.jpg" alt="">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="item">
-                    <img src="#" alt="">
+                    <img src="https://cdn.pixabay.com/photo/2023/09/04/10/12/bird-8232427_960_720.jpg" alt="">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
             </div>
